--- a/upcoming-match.html
+++ b/upcoming-match.html
@@ -18,7 +18,7 @@
                 The Greatest show on the earth
                 </h1>
                 <p>In the South we have four seasons: spring, summer, winter, and football. It's no secret that Southern folks love their football. As soon the weather starts to cool, we break out our team jerseys and go-to game day recipes.</p>
-                <button class="submit"><span class="count" class="text">Watch Live</span><i class="fa-solid fa-arrow-right"></i> </button>
+                <button class="submit"><span class="text">Watch Live</span><i class="fa-solid fa-arrow-right"></i> </button>
             </div>
             <div class="image-container">
                 <img src="image/Banner-Image.png" alt="header banner">
